// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NoMappingMessage displays a message when card has a status 1`] = `
<p
  class="tlp-text-warning taskboard-no-mapping"
>
  <i
    aria-hidden="true"
    class="fa-solid fa-triangle-exclamation"
  />
  <span>
    This card has status 
    <strong>
      YOLO
    </strong>
     that does not map to current taskboard columns.
  </span>
   Please edit the card to change the status, or add children if possible.
</p>
`;

exports[`NoMappingMessage displays another message when card has no status 1`] = `
<p
  class="tlp-text-warning taskboard-no-mapping"
>
  <i
    aria-hidden="true"
    class="fa-solid fa-triangle-exclamation"
  />
  <span>
    This card does not have any status.
  </span>
   Please edit the card to change the status, or add children if possible.
</p>
`;
